BUG#30992 (Wrong implementation of pthread_mutex_trylock()):

Adding support for correct handling of pthread_mutex_trylock() on Win32
systems as well as when using the safe mutexes.